; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/q3map/extr_shaders.c_AllocShaderInfo.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/q3map/extr_shaders.c_AllocShaderInfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { double, i8*, i8*, i8*, i8*, i8*, i8*, i8*, i64, i32, i32, i32 }

@numShaderInfo = common dso_local global i64 0, align 8
@MAX_SURFACE_INFO = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [17 x i8] c"MAX_SURFACE_INFO\00", align 1
@shaderInfo = common dso_local global %struct.TYPE_4__* null, align 8
@CONTENTS_SOLID = common dso_local global i32 0, align 4
@DEFAULT_BACKSPLASH_FRACTION = common dso_local global i32 0, align 4
@DEFAULT_BACKSPLASH_DISTANCE = common dso_local global i32 0, align 4
@qfalse = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_4__* ()* @AllocShaderInfo to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_4__* @AllocShaderInfo() #0 {
  %1 = alloca %struct.TYPE_4__*, align 8
  %2 = load i64, i64* @numShaderInfo, align 8
  %3 = load i64, i64* @MAX_SURFACE_INFO, align 8
  %4 = icmp eq i64 %2, %3
  br i1 %4, label %5, label %7

5:                                                ; preds = %0
  %6 = call i32 @Error(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  br label %7

7:                                                ; preds = %5, %0
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** @shaderInfo, align 8
  %9 = load i64, i64* @numShaderInfo, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i64 %9
  store %struct.TYPE_4__* %10, %struct.TYPE_4__** %1, align 8
  %11 = load i64, i64* @numShaderInfo, align 8
  %12 = add i64 %11, 1
  store i64 %12, i64* @numShaderInfo, align 8
  %13 = load i32, i32* @CONTENTS_SOLID, align 4
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 11
  store i32 %13, i32* %15, align 8
  %16 = load i32, i32* @DEFAULT_BACKSPLASH_FRACTION, align 4
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 10
  store i32 %16, i32* %18, align 4
  %19 = load i32, i32* @DEFAULT_BACKSPLASH_DISTANCE, align 4
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 9
  store i32 %19, i32* %21, align 8
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 8
  store i64 0, i64* %23, align 8
  %24 = load i8*, i8** @qfalse, align 8
  %25 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %25, i32 0, i32 7
  store i8* %24, i8** %26, align 8
  %27 = load i8*, i8** @qfalse, align 8
  %28 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %29 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %28, i32 0, i32 6
  store i8* %27, i8** %29, align 8
  %30 = load i8*, i8** @qfalse, align 8
  %31 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %32 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %31, i32 0, i32 5
  store i8* %30, i8** %32, align 8
  %33 = load i8*, i8** @qfalse, align 8
  %34 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %35 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %34, i32 0, i32 4
  store i8* %33, i8** %35, align 8
  %36 = load i8*, i8** @qfalse, align 8
  %37 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %38 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %37, i32 0, i32 3
  store i8* %36, i8** %38, align 8
  %39 = load i8*, i8** @qfalse, align 8
  %40 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %41 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %40, i32 0, i32 2
  store i8* %39, i8** %41, align 8
  %42 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %43 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %42, i32 0, i32 0
  store double 1.000000e+00, double* %43, align 8
  %44 = load i8*, i8** @qfalse, align 8
  %45 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %46 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %45, i32 0, i32 1
  store i8* %44, i8** %46, align 8
  %47 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  ret %struct.TYPE_4__* %47
}

declare dso_local i32 @Error(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
